# V.-.F.-Whisper

./: .env copy  .gitignore  README.md  mount.sh  pyproject copy.toml  pyproject.toml  requirements.txt  setup.cfg  start.sh
help/: install.docx
source/: draw.py  file_process.py  logger_settings.py  main.py  neural_process.py  test.py  variables.py
tests/: test_file_process.py
transcrib/: file_process.py  logger_settings.py  main.py  neural_process.py  riffer2_wine.py  variables.py
transcrib/riffer2/: Voice7000Converter.bat
wisper_test/: file_process.py  neural_process.py
