[tool.poetry]
name = "v-f-whisper"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "v"}]

[tool.poetry.dependencies]
python = "^3.10"
openai-whisper = "^20231117"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
transformers = "^4.37.2"
pydub = "^0.25.1"
pillow = "^10.2.0"
ffmpeg = "^1.4"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
